--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ series_note: Masterpieces in colour
 subjects:
 - !lcsh 'Bonheur, Rosa, 1822-1899'
 - !lcc 'ND'
+- GITenberg
 title: Rosa Bonheur
 url: http://www.gutenberg.org/ebooks/41939
